--- a/web-project/src/main/webapp/model_simulation.xhtml
+++ b/web-project/src/main/webapp/model_simulation.xhtml
@@ -1,120 +1,153 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core" xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:p="http://primefaces.org/ui" template="/WEB-INF/template.xhtml">
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core" xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui" template="/WEB-INF/template.xhtml">
 
 	<ui:define name="content">
 		<h:form>
-			<div class="ui-g">
-				<div class="ui-g-12">
-					<div class="card card-w-title">
+			<div class="card card-w-title">
+				<div class="ui-g ui-fluid">
+					<div class="ui-g-12 ui-lg-6">
 						<h1>Create Rent Simulation</h1>
-						<p:panelGrid columns="2" layout="grid" style="width:auto" styleClass="ui-panelgrid-blank form-group">
-							<p:panelGrid columns="1" layout="grid" style="width:auto" styleClass="ui-panelgrid-blank form-group">
-								<h:panelGroup>
-									<fieldset style="max-width: 750px;">
-										<LEGEND>
-											<label>What city?</label>
-										</LEGEND>
-										<p:selectOneRadio layout="responsive" columns="7" value="#{simulatorBean.city}">
-											<f:selectItem itemLabel="Vancouver" itemValue="vancouver" />
-											<f:selectItem itemLabel="Burnaby" itemValue="burnaby" />
-											<f:selectItem itemLabel="Richmond" itemValue="richmond" />
-											<f:selectItem itemLabel="New Westminster" itemValue="newwest" />
-											<f:selectItem itemLabel="Surrey" itemValue="surrey" />
-											<f:selectItem itemLabel="Abbotsford" itemValue="abbot" />
-											<f:selectItem itemLabel="Other" itemValue="other" />
-										</p:selectOneRadio>
-									</fieldset>
-									<br />
-								</h:panelGroup>
-								<h:panelGroup styleClass="md-inputfield">
-									<p:spinner style="width: 20%" value="#{simulatorBean.property.bedrooms}" />
-									<label>How many bedrooms?</label>
-								</h:panelGroup>
-								<h:panelGroup styleClass="md-inputfield">
-									<p:spinner style="width: 20%" value="#{simulatorBean.property.bath}" />
-									<label>How many bathrooms?</label>
-								</h:panelGroup>
-								<h:panelGroup styleClass="md-inputfield">
-									<p:inputText style="width: 20%" value="#{simulatorBean.property.size_sqft}" />
-									<label>Size (square ft)?</label>
-								</h:panelGroup>
-								<h:panelGroup styleClass="inputfield">
-									<p:selectBooleanCheckbox value="#{simulatorBean.professionally_managed}" />
-									<p:outputLabel for="@previous">The Property is Professionaly Managed?</p:outputLabel>
-								</h:panelGroup>
-								<h:panelGroup styleClass="inputfield">
-									<p:selectBooleanCheckbox value="#{simulatorBean.no_pet_allowed}" />
-									<p:outputLabel for="@previous">The Property has the No Pet policy?</p:outputLabel>
-								</h:panelGroup>
-								<h:panelGroup styleClass="inputfield">
-									<p:selectBooleanCheckbox value="#{simulatorBean.suit_laundry}" />
-									<p:outputLabel for="@previous">The Property has In Suite Laundry?</p:outputLabel>
-								</h:panelGroup>
-								<h:panelGroup styleClass="inputfield">
-									<p:selectBooleanCheckbox value="#{simulatorBean.park_stall}" />
-									<p:outputLabel for="@previous">The Property has private Park Stall?</p:outputLabel>
-								</h:panelGroup>
-								<h:panelGroup styleClass="inputfield">
-									<p:selectBooleanCheckbox value="#{simulatorBean.available_now}" />
-									<p:outputLabel for="@previous">The Property is Available Now?</p:outputLabel>
-								</h:panelGroup>
-								<h:panelGroup styleClass="inputfield">
-									<p:selectBooleanCheckbox value="#{simulatorBean.amenities}" />
-									<p:outputLabel for="@previous">The Property has Amenities?</p:outputLabel>
-								</h:panelGroup>
-								<h:panelGroup styleClass="inputfield">
-									<p:selectBooleanCheckbox value="#{simulatorBean.brand_new}" />
-									<p:outputLabel for="@previous">The Property can be qualified as Brand New?</p:outputLabel>
-								</h:panelGroup>
-								<h:panelGroup styleClass="inputfield">
-									<p:selectBooleanCheckbox value="#{simulatorBean.basement}" />
-									<p:outputLabel for="@previous">The Property is Basement or Laneway?</p:outputLabel>
-								</h:panelGroup>
+						<p:panelGrid columns="1" styleClass="form-group ui-panelgrid-blank" layout="grid">
+							<h:panelGroup>
+								<fieldset style="max-width: 750px;">
+									<LEGEND>
+										<label>What city?</label>
+									</LEGEND>
+									<p:selectOneRadio layout="responsive" columns="7" value="#{simulatorBean.city}">
+										<f:selectItem itemLabel="Vancouver" itemValue="vancouver" />
+										<f:selectItem itemLabel="Burnaby" itemValue="burnaby" />
+										<f:selectItem itemLabel="Richmond" itemValue="richmond" />
+										<f:selectItem itemLabel="New Westminster" itemValue="newwest" />
+										<f:selectItem itemLabel="Surrey" itemValue="surrey" />
+										<f:selectItem itemLabel="Abbotsford" itemValue="abbot" />
+										<f:selectItem itemLabel="Other" itemValue="other" />
+									</p:selectOneRadio>
+								</fieldset>
+								<br />
+							</h:panelGroup>
+							<h:panelGroup styleClass="md-inputfield">
+								<p:spinner style="width: 20%" value="#{simulatorBean.property.bedrooms}" />
+								<label>How many bedrooms?</label>
+							</h:panelGroup>
+							<h:panelGroup styleClass="md-inputfield">
+								<p:spinner style="width: 20%" value="#{simulatorBean.property.bath}" />
+								<label>How many bathrooms?</label>
+							</h:panelGroup>
+							<h:panelGroup styleClass="md-inputfield">
+								<p:inputText style="width: 20%" value="#{simulatorBean.property.size_sqft}" />
+								<label>Size (square ft)?</label>
+							</h:panelGroup>
+							<h:panelGroup styleClass="inputfield">
+								<p:selectBooleanCheckbox value="#{simulatorBean.professionally_managed}" />
+								<p:outputLabel for="@previous">The Property is Professionaly Managed?</p:outputLabel>
+							</h:panelGroup>
+							<h:panelGroup styleClass="inputfield">
+								<p:selectBooleanCheckbox value="#{simulatorBean.no_pet_allowed}" />
+								<p:outputLabel for="@previous">The Property has the No Pet policy?</p:outputLabel>
+							</h:panelGroup>
+							<h:panelGroup styleClass="inputfield">
+								<p:selectBooleanCheckbox value="#{simulatorBean.suit_laundry}" />
+								<p:outputLabel for="@previous">The Property has In Suite Laundry?</p:outputLabel>
+							</h:panelGroup>
+							<h:panelGroup styleClass="inputfield">
+								<p:selectBooleanCheckbox value="#{simulatorBean.park_stall}" />
+								<p:outputLabel for="@previous">The Property has private Park Stall?</p:outputLabel>
+							</h:panelGroup>
+							<h:panelGroup styleClass="inputfield">
+								<p:selectBooleanCheckbox value="#{simulatorBean.available_now}" />
+								<p:outputLabel for="@previous">The Property is Available Now?</p:outputLabel>
+							</h:panelGroup>
+							<h:panelGroup styleClass="inputfield">
+								<p:selectBooleanCheckbox value="#{simulatorBean.amenities}" />
+								<p:outputLabel for="@previous">The Property has Amenities?</p:outputLabel>
+							</h:panelGroup>
+							<h:panelGroup styleClass="inputfield">
+								<p:selectBooleanCheckbox value="#{simulatorBean.brand_new}" />
+								<p:outputLabel for="@previous">The Property can be qualified as Brand New?</p:outputLabel>
+							</h:panelGroup>
+							<h:panelGroup styleClass="inputfield">
+								<p:selectBooleanCheckbox value="#{simulatorBean.basement}" />
+								<p:outputLabel for="@previous">The Property is Basement or Laneway?</p:outputLabel>
+							</h:panelGroup>
+							<h:panelGroup styleClass="inputfield">
+								<p:selectBooleanCheckbox value="#{simulatorBean.furnished}" />
+								<p:outputLabel for="@previous">The Property is Furnished?</p:outputLabel>
+							</h:panelGroup>
 
-								<p:commandButton value="Simulate Rent" actionListener="#{simulatorBean.simulateRent()}" update="pnlLog pnlResult" />
-							</p:panelGrid>
-							<p:panelGrid id="pnlResult" columns="1" layout="grid" style="width:auto" styleClass="ui-panelgrid-blank form-group">
-								<div class="ui-g dashboard">
-									<div class="ui-g-12 ui-lg-4">
-										<div class="task-box task-box-3">
-											<div class="task-box-header bold">
-												Result
-												<i class="material-icons">&#xE5D5;</i>
+							<p:commandButton value="Simulate Rent" actionListener="#{simulatorBean.simulateRent()}" update="pnlLog pnlResult" />
+						</p:panelGrid>
+					</div>
+
+					<div class="ui-g-12 ui-lg-6">
+						<h:panelGroup id="pnlResult">
+							<h2>Results:</h2>
+							<div class="layout-dashboard">
+								<div class="ui-g">
+									<div class="overview-box overview-box-checkins overview-box-model" style="background-color: #dee8ed !important;">
+										<p:graphicImage name="images/dashboard/asset-template.png" library="olympia-layout" />
+										<i class="fas fa-dollar-sign fa-2x" style="color: #dee8ed !important;"></i>
+										<div class="overview-box-content">
+											<div class="overview-box-title">Linear Regression Model</div>
+											<div class="overview-box-details box-model">
+												<h:outputText value="#{simulatorBean.property.linearRegressionStr}" />
 											</div>
-											<div class="task-box-content">
-												<span class="task-status">
-													<h3>Regression Model</h3>
-												</span>
-												<div class="price-result">
-													<p>#{simulatorBean.property.regressionStr}</p>
-												</div>
-												<span class="task-status">
-													<h3>Gradient Xgb Model</h3>
-												</span>
-												<div class="price-result">
-													<p>#{simulatorBean.property.gradientXgbStr}</p>
-												</div>
-												<span class="task-status">
-													<h3>Gradient Boosting Model</h3>
-												</span>
-												<div class="price-result">
-													<p>#{simulatorBean.property.gradientBoostStr}</p>
-												</div>
+										</div>
+									</div>
+									<div class="overview-box overview-box-checkins overview-box-model" style="background-color: #e7edde !important;">
+										<p:graphicImage name="images/dashboard/asset-template.png" library="olympia-layout" />
+										<i class="fas fa-dollar-sign fa-2x" style="color: #e7edde !important;"></i>
+										<div class="overview-box-content">
+											<div class="overview-box-title">XGB Linear Regression Model</div>
+											<div class="overview-box-details box-model">
+												<h:outputText value="#{simulatorBean.property.xgbLinearStr}" />
+											</div>
+										</div>
+									</div>
+									<div class="overview-box overview-box-checkins overview-box-model" style="background-color: #ede1de !important;">
+										<p:graphicImage name="images/dashboard/asset-template.png" library="olympia-layout" />
+										<i class="fas fa-dollar-sign fa-2x" style="color: #ede1de !important;"></i>
+										<div class="overview-box-content">
+											<div class="overview-box-title">XGB Regression Model</div>
+											<div class="overview-box-details box-model">
+												<h:outputText value="#{simulatorBean.property.xgbRegressorStr}" />
+											</div>
+										</div>
+									</div>
+									<div class="overview-box overview-box-checkins overview-box-model" style="background-color: #e6d2ae !important;">
+										<p:graphicImage name="images/dashboard/asset-template.png" library="olympia-layout" />
+										<i class="fas fa-dollar-sign fa-2x" style="color: #e6d2ae !important;"></i>
+										<div class="overview-box-content">
+											<div class="overview-box-title">DMatrix Regression Model</div>
+											<div class="overview-box-details box-model">
+												<h:outputText value="#{simulatorBean.property.dmatrixStr}" />
+											</div>
+										</div>
+									</div>
+									<div class="overview-box overview-box-checkins overview-box-model" style="background-color: #d0c6e4 !important;">
+										<p:graphicImage name="images/dashboard/asset-template.png" library="olympia-layout" />
+										<i class="fas fa-dollar-sign fa-2x" style="color: #d0c6e4 !important;"></i>
+										<div class="overview-box-content">
+											<div class="overview-box-title">Gradient Boosting Model</div>
+											<div class="overview-box-details box-model">
+												<h:outputText value="#{simulatorBean.property.gradientBoostStr}" />
 											</div>
 										</div>
 									</div>
 								</div>
-							</p:panelGrid>
-						</p:panelGrid>
-					</div>
-				</div>
-				<div class="ui-g-12">
-					<div class="card card-w-title">
-						<h:panelGroup id="pnlLog">
-							<p:scrollPanel id="log" mode="native" style="width:100%;height:400px">
-								<h:outputText value="#{simulatorBean.output}" escape="false" />
-							</p:scrollPanel>
+							</div>
 						</h:panelGroup>
 					</div>
+				</div>
+			</div>
+			<div class="ui-g-12">
+				<div class="card card-w-title">
+					<h:panelGroup id="pnlLog">
+						<p:scrollPanel id="log" mode="native" style="width:100%;height:400px">
+							<pre>
+								<h:outputText value="#{simulatorBean.output}" escape="false" />
+							</pre>
+						</p:scrollPanel>
+					</h:panelGroup>
 				</div>
 			</div>
 		</h:form>
