Web Simulation Page Fix

--- a/web-project/src/main/webapp/model_simulation.xhtml
+++ b/web-project/src/main/webapp/model_simulation.xhtml
@@ -82,7 +82,7 @@
 						<h:panelGroup id="pnlResult">
 							<h2>Results:</h2>
 							<div class="layout-dashboard">
-								<div class="ui-g">
+								<div class="ui-g-6">
 									<div class="overview-box overview-box-checkins overview-box-model" style="background-color: #dee8ed !important;">
 										<p:graphicImage name="images/dashboard/asset-template.png" library="olympia-layout" />
 										<i class="fas fa-dollar-sign fa-2x" style="color: #dee8ed !important;"></i>
