--- a/web-project/src/main/webapp/model_simulation.xhtml
+++ b/web-project/src/main/webapp/model_simulation.xhtml
@@ -34,7 +34,7 @@
 								<label>How many bedrooms?</label>
 							</h:panelGroup>
 							<h:panelGroup styleClass="md-inputfield">
-								<p:spinner style="width: 20%" value="#{simulatorBean.property.bath}" />
+								<p:spinner style="width: 20%" value="#{simulatorBean.property.bath}" decimalPlaces="1" stepFactor="0.5" />
 								<label>How many bathrooms?</label>
 							</h:panelGroup>
 							<h:panelGroup styleClass="md-inputfield">
