Web dashboard just use data quality

--- a/web-project/src/main/webapp/dashboard.xhtml
+++ b/web-project/src/main/webapp/dashboard.xhtml
@@ -35,7 +35,7 @@
 					<div class="overview-box overview-box-checkins">
 						<p:graphicImage name="images/dashboard/asset-checkins.svg" library="olympia-layout" />
 						<div class="overview-box-content">
-							<div class="overview-box-title">PROPERTIES WITH VALUE</div>
+							<div class="overview-box-title">PROPERTIES WITH QUALITY DATA</div>
 							<div class="overview-box-details">
 								<h:outputText value="#{dataAnalysisBean.dataWithValueSize}" />
 							</div>
